fix: always show image on mobile and desktop

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -3,3 +3,12 @@
 @import "./index";
 @import "./stars";
 @import "./typography";
+@media (min-width: 768px) {
+    .d-md-block {
+      display: block !important;
+    }
+  }
+  
+  .d-none {
+    display: block !important;
+  }
